<resources>
    <string name="app_name">Health Connect</string>
    <string name="txtAppointmentHeading">Appointments</string>
    <string name="txtSearchAppointment">Search an appointment</string>
    <string name="txtAddAppointmentTitle">Add New Appointment</string>
    <string name="txtAppointmentTitle">Appointment Information</string>
    <string name="btnViewAppointment">View</string>
    <string name="btnUpdateAppointment">Update</string>
    <string name="btnDeleteAppointment">Delete</string>
    <string name="btnAddAppointment">+</string>
    <string name="btnSaveAppointment">Add Appointment</string>
    <string name="btnBack">Back</string>
    <string name="txtAppointmentID">Appointment ID</string>
    <string name="txtPatientName">Patient Name</string>
    <string name="txtPatientHealthNumber">Personal Health Number</string>
    <string name="txtPatientPHN">Patient PHN</string>
    <string name="txtPatientGender">Gender</string>
    <string name="txtPatientDOB">DOB</string>"
    <string name="txtDoctorName">Doctor Name</string>
    <string name="txtDate">Date</string>
    <string name="txtTime">Time</string>
    <string name="txtAppointmentReason">Reason</string>
    <string name="btnAppointments">Appointments</string>
    <string name="txtMedicationHead">Medication Information</string>
    <string name="txtMedicationTitle">Medication Name</string>
    <string name="txtMedicationForm">Medication Form</string>
    <string name="txtMedicationStrength">Strength</string>
    <string name="txtMedicationDosage">Dosage</string>
    <string name="txtMedicationDuration">Duration</string>
    <string name="btnAddMedication">Add Medication</string>
    <string name="tvPatientManagement">Patient Management</string>
    <string name="searchHint"> Search Patient </string>
    <string name="tvAddPatients"> Add Patients </string>
    <string name="tvPHN">Personal Health Number</string>
    <string name="tvName">Name</string>
    <string name="tvBirthday">Birthday</string>
    <string name="tvAddress" translatable="false">Address</string>
    <string name="tvPhone">Phone</string>
    <string name="tvPractitionerID">Practitioner ID</string>
    <string name="btnAddPatient">Add Patient</string>
    <string name="btnCancel">Cancel</string>
    <string name="tvViewPatients"> View Patient</string>
    <string name="btnViewPatientHistory">View Patient History</string>
    <string name="tvAddPatientHistory">Add Patient History</string>
    <string name="tvPatientHistory">Patient History</string>
    <string name="btnGeneratePDF">Generate PDF</string>
    <string name="DateTime"> Enter Date/Time</string>
    <string name="weight"> Enter Weight </string>
    <string name="height"> Enter Height </string>
    <string name="diagnosis"> Enter Diagnosis </string>
    <string name="treatments"> Enter Treatments </string>
    <string name="btnGender"> Gender </string>
    <string name="viewPatient"> View Patient </string>
    <string name="modifyPatient"> Update Patient </string>
    <string name="deletePatient"> Delete Patient </string>
    <string name="SignIn">Sign In</string>
    <string name="Email">Email</string>
    <string name="EmailHint">example@email.com</string>
    <string name="Password">Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="NameHint">Your full name</string>
    <string name="PractitionerId">Practitioner ID</string>
    <string name="DoctorIDHint">Your practitioner ID</string>
    <string name="Phone">Phone</string>
    <string name="Name">Name</string>
    <string name="PhoneHint">Your Phone Number</string>
    <string name="UpAppointment">Upcoming Appointments</string>
    <string name="ConsultHistory">Consultation History</string>
    <string name="MngPatients">Manage Patients</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="txtAppointmentDate">Date</string>
    <string name="txtMedId">Medicine Number</string>
    <string name="txtMedHistoryId">Medicine Reference Number</string>
    <string name="btnSendEmail">Send Email Reminder</string>
    <string name="txtMail">Send Reminder</string>
    <string name="txtReceiverAddress">Receiver Address :</string>
    <string name="txtMailSubject">Subject :</string>
    <string name="txtMailBody">Body :</string>
    <string name="txtReminderSubject">Reminder for your upcoming appointment</string>
    <string name="btnViewMedication">View Medication</string>
    <string name="ViewMedication">View Medication</string>
</resources>