<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <LinearLayout

        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:text="@string/txtAppointmentTitle"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txtAppointmentID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:text=""
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_margin="5dp"
                    android:text="@string/txtPatientPHN"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtPatientPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_margin="5dp"
                    android:text=""
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_margin="5dp"
                    android:text="@string/txtDate"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtAppointmentDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_margin="5dp"
                    android:text=""
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtReason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="3dp"
                    android:text="@string/txtAppointmentReason"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtAppointmentReason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="3dp"
                    android:text=""
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btnSendEmail"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/btnViewAppointment"
                    android:text="@string/btnSendEmail"
                    android:background="@drawable/green_button_200"
                    style="@style/white_25"
                    tools:ignore="ImageContrastCheck" />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnViewAppointment"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/btnViewAppointment"
                android:background="@drawable/view_icon"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/btnUpdateAppointment"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/btnUpdateAppointment"
                android:background="@drawable/edit_icon"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/btnDeleteAppointment"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/btnDeleteAppointment"
                android:background="@drawable/delete_icon"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
